[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUDRPM.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD_dynamic_font_26.tres" type="FontFile" id=2]

[node name="HUDRPM" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -35.0
offset_right = 95.0
offset_bottom = 35.0
custom_constants/v_separation = 0
custom_constants/h_separation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMotor1" type="Label" parent="GridContainer"]
offset_right = 85.0
offset_bottom = 33.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00000"

[node name="LabelMotor2" type="Label" parent="GridContainer"]
offset_left = 105.0
offset_right = 190.0
offset_bottom = 33.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00000"

[node name="LabelMotor4" type="Label" parent="GridContainer"]
offset_top = 33.0
offset_right = 85.0
offset_bottom = 66.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00000"

[node name="LabelMotor3" type="Label" parent="GridContainer"]
offset_left = 105.0
offset_top = 33.0
offset_right = 190.0
offset_bottom = 66.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "00000"
